<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/frame_1_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40px"
        android:background="@drawable/frame_1_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/frame_1_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:textColor="@android:color/white"
            android:textSize="8pt" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/tomato" />

        <TextView
            android:id="@+id/frame_1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15px"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15pt" />

        <TextView
            android:id="@+id/frame_1_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/frame_1_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/frame_1_created_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="10pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40px"
        android:background="@drawable/frame_2_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/frame_2_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:text="@string/frame_2_id"
            android:textColor="@android:color/white"
            android:textSize="8pt" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/salad" />

        <TextView
            android:id="@+id/frame_2_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15px"
            android:text="@string/frame_2_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15pt" />

        <TextView
            android:id="@+id/frame_2_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_2_days"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/frame_2_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_2_status"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/frame_2_created_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_2_created_at"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="10pt" />
    </LinearLayout>
</LinearLayout>